--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,14 @@
         }
       }(window.location))
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0RX32H30YE"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-0RX32H30YE');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
